force-app/main/default/objects/PDLM__Lifecycle__c/PDLM__Lifecycle__c.object-meta.xml
<CustomObject>
    <description>Define Phases and behaviors for Categories and Items</description>
    <label>Lifecycle</label>
    <nameField>
        <label>Lifecycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lifecycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>