force-app/main/default/objects/PDLM__Lifecycle__c/fields/PDLM__First_Phase__c.field-meta.xml
<CustomField>
    <fullName>PDLM__First_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>no longer used</description>
    <label>OBSOLETE</label>
    <referenceTo>PDLM__Phase__c</referenceTo>
    <relationshipLabel>Lifecycles</relationshipLabel>
    <relationshipName>Lifecycles</relationshipName>
    <type>Lookup</type>
</CustomField>