force-app/main/default/objects/PDLM__Lifecycle__c/fields/PDLM__Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Name_Unique__c</fullName>
    <description>prevent duplicate lifecycle names</description>
    <label>Name Unique</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>