force-app/main/default/objects/PDLM__Lifecycle__c/fields/PDLM__Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Primary_Key__c</fullName>
    <description>used for data loading and upsert</description>
    <externalId>true</externalId>
    <label>Primary Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>