force-app/main/default/objects/PDLM__Lifecycle__c/fields/PDLM__Type__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Type__c</fullName>
    <description>The Type determines where this lifecycle can be used.</description>
    <inlineHelpText>The Type determines where this lifecycle can be used.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
                <default>true</default>
                <label>Item</label>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
            </value>
            <value>
                <fullName>Geo Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>