force-app/main/default/objects/PDLM__Lifecycle__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PDLM__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>